# jaypore_ci

./: .gitignore  .pylintrc  .pyproject.toml.swp  .pyre_configuration  Dockerfile  LICENSE  README.md  pyproject.toml  script.sh  setup.sh  x.py
.jaypore_ci/: cicd.py  pre-push.githook
cicd/: Dockerfile  __init__.py  build_and_publish_docs.sh  build_and_push_docker.sh  build_and_push_pypi.sh  cicd.py  cli.sh  edit_secrets.sh  in_parallel.py  in_sequence.py  install_docker.sh  integration_test.py  on_file_changes.py  pre-push.githook  pre-push.sh  render_changelog.py  run_tests.sh  set_env.sh  test_installation.sh  trigger.sh  with_db.py
cicd/config/: main.py  mini.py
compose/: reference.yml
docs/: .gitignore
docs/source/: conf.py  examples.rst  getting_started.rst  ideas.rst  index.rst
jaypore_ci/: .cli.py.swp  .config.py.swp  __main__.py  changelog.py  clean.py  cli.py  config.py  docker.py  exceptions.py  gitea.py  interfaces.py  jci.py  logging.py  primitives.py  tui.css  tui.py
jaypore_ci/executors/: __init__.py  docker.py  mock.py
jaypore_ci/remotes/: __init__.py  email.py  git.py  gitea.py  github.py  mock.py
jaypore_ci/reporters/: __init__.py  gitea.py  markdown.py  mock.py  text.py
jayporeci/: cli.py  definitions.py  executors.py  impl.py  interfaces.py  platforms.py  reporters.py  repos.py  schedulers.py  shortcuts.py
secrets/: .gitignore  ci.enc  edit_env.sh  jaypore_ci.enc  khushboo.enc
tests/: conftest.py  docker_mock.py  factories.py  requests_mock.py  subprocess_mock.py  test_configs.py  test_doc_examples.py  test_hypo_jci.py  test_jaypore_ci.py
xjci/: cli.py  interfaces.py  jci.py  sub.py
xtests/: conftest.py  jayporeci_patch.py  subprocess_mock.py  test_jaypore_ci.py
(+18 files in other folders)
