[tool.poetry]
name = "jaypore_ci"
version = "0.2"
description = ""
authors = ["arjoonn sharma <arjoonn.94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
click = "^8.1.3"
pendulum = "^2.1.2"
structlog = "^22.3.0"
textual = "^0.9.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.7"
black = "^22.10.0"
pytest = "^7.2.0"
sphinx = "^5.3.0"
textual = {extras = ["dev"], version = "^0.9.1"}
rich = "^13.2.0"
coverage = "^7.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
