[tool.poetry]
name = "jaypore_ci"
version = "0.2.30"
description = ""
authors = ["arjoonn sharma <arjoonn.94@gmail.com>"]
homepage = "https://www.jayporeci.in/"
documentation = "https://www.jayporeci.in/"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
click = "^8.1.3"
pendulum = "^2.1.2"
structlog = "^22.3.0"
docker = "^6.0.1"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.7"
black = "^22.10.0"
pytest = "^7.2.0"
sphinx = "^5.3.0"
rich = "^13.2.0"
coverage = "^7.0.5"
pytest-profiling = "^1.7.0"
hypothesis = "^6.68.2"
sphinx-rtd-theme = "^1.2.0"
sphinxcontrib-mermaid = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
